# QML-Best-Practice

./: .gitignore  Backend.qml  CMakeLists.txt  Main.qml  README.md  main.cpp
